create element article and get fullname actors

--- a/index.html
+++ b/index.html
@@ -4,19 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/style.css">
+    <script defer src="./actorsCards.js"></script>
 </head>
 <body>
-  <div class="container">
-    <div class="wrapper">
-        <section class="content">
-            <article class="blockActors">
-                <img class="actorFoto" src="" alt="">
-                <h1 class="actorName"></h1>
-                <logo></logo>
-            </article>
-            <article class="blockChooced"></article>
-        </section>
-    </div>
-  </div>  
+  <section id="root"></section>
 </body>
 </html>
+<!-- <div class="container">
+    <div class="wrapper">
+        <section class="contentActors">
+            <article class="blockActors">
+                <img class="actorFoto" src="" alt="">
+                <h2 class="actorName"></h2>
+                <logo></logo>
+            </article>
+            <article class="blockChooced">
+              <p><p/>
+            </article>
+        </section>
+    </div>
+  </div>   -->
