--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
     <script defer src="./actorsCards.js"></script>
 </head>
 <body>
-  <section id="root"></section>
+  <div class="wrapper">
+    <section class="contentActors">
+    <section id="root"></section>
+  </section>
+  </div>
+  
+  
 </body>
 </html>
 <!-- <div class="container">
@@ -17,11 +23,13 @@
             <article class="blockActors">
                 <img class="actorFoto" src="" alt="">
                 <h2 class="actorName"></h2>
-                <logo></logo>
-            </article>
-            <article class="blockChooced">
-              <p><p/>
+                <a href="https://www.facebook.com/JasonStatham/"><img src="" alt="fasebook logo"></a>
+                <a href="https://www.twitter.com/JasonStatham/"><img src="" alt="twitter logo"></a>
+                <a href="https://www.instagram.com/JasonStatham/"><img src="" alt="instagram logo"></a>
             </article>
         </section>
+        <section class="blockChooced">
+              <p><p/>
+            </section>
     </div>
   </div>   -->
