added contentName for h1

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
   <div class="wrapper">
     <section class="contentActors">
+      <h1 class="contentName">Actors</h1>
     <section id="root"></section>
   </section>
   </div>
